--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,19 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TournamentLeague"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".Activity.TournamentFolder.TournamentViewActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.TournamentListActivity"
+            android:name=".Activity.TournamentFolder.TournamentListActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.RegistrationActivity"
+            android:name=".Activity.LoginAndRegistration.RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.LoginActivity"
-            android:exported="true">
+            android:name=".Activity.LoginAndRegistration.LoginActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +37,7 @@
         </activity>
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
